# Wireviz2KiCad

./: .gitignore  .wireviz2kicad.yml  README.md  pyproject.toml  requirements.txt
examples/: example_loom_complex.bom.tsv  example_loom_complex.yml  example_loom_simple.yml
scripts/: check_meta.py  run_convert.py
templates/: example_template.kicad_wks
tests/: test_bom.py  test_encoder.py  test_parser.py  test_parser_extended.py  test_schematic.py  test_schematic_extra.py  test_schematic_titleblock.py  tmp_bom_test.tsv
wireviz2kicad/: __init__.py  bom.py  cli.py  config.py  encoder.py  parser.py  schematic.py
